add support for touchscreens

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         <img class="food" id="ramen" src="food/ramen.png" />
       </div>
     </div>
+    <p>Testing touch screens</p>
   </body>
 </html>
