fix typo, optimize pictures

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img id="base-picture" src="base.jpg" />
         <img class="food" id="chocolate" src="food/chocolate.png" />
         <img class="food" id="chicken" src="food/chicken.png" />
-        <img class="food" id="crossiant" src="food/crossiant.png" />
+        <img class="food" id="croissant" src="food/croissant.png" />
         <img class="food" id="fries" src="food/fries.png" />
         <img class="food" id="hamburger" src="food/hamburger.png" />
         <img class="food" id="hotdog" src="food/hotdog.png" />
@@ -24,6 +24,5 @@
         <img class="food" id="ramen" src="food/ramen.png" />
       </div>
     </div>
-    <p>Testing touch screens</p>
   </body>
 </html>
