add z-indexs, flip and repositions some foods

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <div class="flex-column margin-y content">
       <h1 class="title margin-y">Find the Kurstyn</h1>
       <!-- Draggable images -->
+      <!-- Z indexs are set in the order they appear -->
       <div class="margin-y" id="wrapper">
         <img id="base-picture" src="base.jpg" />
-        <img class="food" id="chocolate" src="food/chocolate.png" />
         <img class="food" id="chicken" src="food/chicken.png" />
-        <img class="food" id="croissant" src="food/croissant.png" />
         <img class="food" id="fries" src="food/fries.png" />
         <img class="food" id="hamburger" src="food/hamburger.png" />
-        <img class="food" id="hotdog" src="food/hotdog.png" />
-        <img class="food" id="pizza" src="food/pizza.png" />
         <img class="food" id="popcorn" src="food/popcorn.png" />
+        <img class="food" id="hotdog" src="food/hotdog.png" />
         <img class="food" id="ramen" src="food/ramen.png" />
+        <img class="food" id="croissant" src="food/croissant.png" />
+        <img class="food" id="pizza" src="food/pizza.png" />
+        <img class="food" id="chocolate" src="food/chocolate.png" />
       </div>
     </div>
   </body>
