add media folder, update README

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       <!-- Draggable images -->
       <!-- Z indexs are set in the order they appear -->
       <div class="margin-y" id="wrapper">
-        <img id="base-picture" src="base.jpg" />
-        <img class="food" id="chicken" src="food/chicken.png" />
-        <img class="food" id="fries" src="food/fries.png" />
-        <img class="food" id="hamburger" src="food/hamburger.png" />
-        <img class="food" id="popcorn" src="food/popcorn.png" />
-        <img class="food" id="hotdog" src="food/hotdog.png" />
-        <img class="food" id="ramen" src="food/ramen.png" />
-        <img class="food" id="croissant" src="food/croissant.png" />
-        <img class="food" id="pizza" src="food/pizza.png" />
-        <img class="food" id="chocolate" src="food/chocolate.png" />
+        <img id="base-picture" src="media/base.jpg" />
+        <img class="food" id="chicken" src="media/food/chicken.png" />
+        <img class="food" id="fries" src="media/food/fries.png" />
+        <img class="food" id="hamburger" src="media/food/hamburger.png" />
+        <img class="food" id="popcorn" src="media/food/popcorn.png" />
+        <img class="food" id="hotdog" src="media/food/hotdog.png" />
+        <img class="food" id="ramen" src="media/food/ramen.png" />
+        <img class="food" id="croissant" src="media/food/croissant.png" />
+        <img class="food" id="pizza" src="media/food/pizza.png" />
+        <img class="food" id="chocolate" src="media/food/chocolate.png" />
       </div>
     </div>
   </body>
