--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@allicolyer" />
+    <meta property="og:url" content="https://www.kurstyn.shop/" />
+    <meta property="og:title" content="Shopping for Kurstyn" />
+    <meta property="og:description" content="Happy birthday Kurstyn!" />
+    <meta property="og:image" content="media/card.png" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js" defer></script>
     <meta charset="UTF-8" />
-    <title>Shopping for Kurst</title>
+    <title>Shopping for Kurstyn</title>
   </head>
 
   <body>
