--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <body>
     <div class="flex-column margin-y content">
-      <h1 class="title margin-y">Find the Kurstyn</h1>
+      <h1 class="title margin-bottom">Find the Kurstyn</h1>
       <!-- Draggable images -->
       <!-- Z indexs are set in the order they appear -->
-      <div class="margin-y" id="wrapper">
+      <div class="margin-bottom" id="wrapper">
         <img id="base-picture" src="media/base.jpg" />
         <img class="food" id="chicken" src="media/food/chicken.png" />
         <img class="food" id="fries" src="media/food/fries.png" />
@@ -30,6 +30,7 @@
         <img class="food" id="pizza" src="media/food/pizza.png" />
         <img class="food" id="chocolate" src="media/food/chocolate.png" />
       </div>
+      <button id="reset">Reset</button>
     </div>
   </body>
 </html>
