--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta property="og:url" content="https://www.kurstyn.shop/" />
     <meta property="og:title" content="Shopping for Kurstyn" />
     <meta property="og:description" content="Happy birthday Kurstyn!" />
-    <meta property="og:image" content="media/card.png" />
+    <meta
+      property="og:image"
+      content="https://www.kurstyn.shop/media/card.png"
+    />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js" defer></script>
     <meta charset="UTF-8" />
