--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js" defer></script>
     <meta charset="UTF-8" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-115956895-4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-115956895-4");
+    </script>
     <title>Shopping for Kurstyn</title>
   </head>
 
